# packages/functions/src/api/routes.ts
@@ -4,6 +4,7 @@ import { HTTPException } from "hono/http-exception";
 import { VisibleError, ErrorCodes, type ErrorResponseType } from "@template/core/error";
 import { Log } from "@template/core/util/log";
 import { AuthApi } from "./handler/auth";
+import { KeyApi } from "./handler/key";
 import { UserApi } from "./handler/user";
 import { TodoApi } from "./handler/todo";
 import { auth } from "./middleware";
@@ -23,6 +24,7 @@ app
 export const routes = app
   .route("/", UserApi.route)
   .route("/auth", AuthApi.route)
+  .route("/key", KeyApi.route)
   .route("/todo", TodoApi.route)
   .onError((error, c) => {
     if (error instanceof VisibleError) {
